# namecheap-connector

./: README.md  docker-compose.yaml  namecheap-connector.service  pyproject.toml
.github/workflows/: main.yaml
src/: .env.template  main.py  namecheap.py  service.py
